<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="drawViewModel"
            type="be.hogent.faith.faith.details.drawing.create.DrawViewModel" />

        <import type="android.graphics.Color" />

        <import type="android.view.View" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/panel_corner_radius">

        <LinearLayout
            android:id="@+id/linearLayoutColors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_draw_blackSelected"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/pijl"
                    android:src="@drawable/ic_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_draw_setColorBlack"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/choose_black"
                    android:onClick="@{() -> drawViewModel.pickColor(@color/black)}"
                    android:src="@drawable/paintpot_black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_draw_blueSelected"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/pijl"
                    android:src="@drawable/ic_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_draw_setColorBlue"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/choose_blue"
                    android:onClick="@{() -> drawViewModel.pickColor(@color/blue)}"
                    android:src="@drawable/paintpot_blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_draw_redSelected"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/pijl"
                    android:src="@drawable/ic_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_draw_setColorRed"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/choose_red"
                    android:onClick="@{() -> drawViewModel.pickColor(@color/red)}"
                    android:src="@drawable/paintpot_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_draw_yellowSelected"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/pijl"
                    android:src="@drawable/ic_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_draw_setColorYellow"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/choose_yellow"
                    android:onClick="@{() -> drawViewModel.pickColor(@color/yellow)}"
                    android:src="@drawable/paintpot_yellow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_draw_greenSelected"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/pijl"
                    android:src="@drawable/ic_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_draw_setColorGreen"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/choose_green"
                    android:onClick="@{() -> drawViewModel.pickColor(@color/green)}"
                    android:src="@drawable/paintpot_green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/hr_customColor"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/paintpot_customColor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/pijl"
                    android:src="@drawable/ic_selected"
                    android:visibility="@{drawViewModel.customColorSelected? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_draw_setCustomColor"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/choose_green"
                    android:onClick="@{()->drawViewModel.onCustomColorClicked()}"
                    android:src="@drawable/paintpot_general"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>


