...
            android:id="@+id/linearLayoutPencils"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_pencil"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:onClick="@{()->drawViewModel.onPencilClicked()}"
                android:padding="16dp"
...
            <View
                android:layout_height="1dip"
                android:layout_width="fill_parent"
                android:background="@color/black"/>

            <ImageView
                android:id="@+id/btn_eraser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:onClick="@{()->drawViewModel.onEraserClicked()}"
                android:padding="16dp"
...
