...
    <string name="dialog_to_restart_drawavatar_title">"Wil je opniew beginnen?</string>
    <string name="dialog_to_restart_drawavatar_message">Ben je zeker?</string>
    <string name="dialog_to_the_city_title">"Wil je teruggaan naar de stad?</string>
    <string name="dialog_to_the_city_message">Ben je zeker? Je gebeurtenis is nog niet opgeslagen!</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="txt_error_userNameOrAvatarNotSet">Vul je naam in en selecteer een avatar</string>
    <string name="error_save_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
    <string name="error_register_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
    <string name="error_event_no_title">Je moet een titel geven aan je werkje.</string>
    <string name="lbl_save_event_notes">Notities</string>
    <string name="lbl_save_event_date">Dag</string>
    <string name="lbl_save_event_title">Titel</string>
...
